<resources>
    <string name="app_name">快车道</string>
    <string name="net_error">当前网络不可用，请检查您的网络设置</string>
    <string name="please_input_account">请输入帐号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="account">帐号：</string>
    <string name="password">密码：</string>
    <string name="login">登录</string>
    <string name="task_notify">任务通知</string>
    <string name="approval">审批</string>
    <string name="approval_notify">审批通知</string>
    <string name="alarm_notify">报警通知</string>
    <string name="basis_app">基础应用</string>
    <string name="task">任务</string>
    <string name="tour_shop_manager">巡店管理</string>
    <string name="attendance">考勤</string>
    <string name="promotion_manager">促销管理</string>
    <string name="puchase_manager">进货管理</string>
    <string name="sales_manager">销售管理</string>
    <string name="inventory_manager">库存管理</string>
    <string name="money_manager">钱流管理</string>
    <string name="title">标题：</string>
    <string name="please_input_title">请输入标题</string>
    <string name="content">内容：</string>
    <string name="please_input_task_content">请输入任务内容</string>
    <string name="stop_time">截止时间：</string>
    <string name="expected_bonus">预计奖金：</string>
    <string name="expected_fine">预计罚款：</string>
    <string name="executor">执行人</string>
    <string name="click_choose_date">点击选择时间</string>
    <string name="please_input_bonus">请输入奖金</string>
    <string name="please_input_fine">请输入罚款</string>
    <string name="supplier_management">供应商管理</string>
    <string name="client_manager">会员管理</string>
    <string name="store_switch">门店切换</string>
    <string name="wages_section">工资条</string>
    <string name="date_of_birth">出生日期：</string>
    <string name="identification_number">身份证号码：</string>
    <string name="please_input_identification_number">请输入身份证号码</string>
    <string name="contact_information">联系方式：</string>
    <string name="please_input_contact">请输入联系方式</string>
    <string name="emergency_contact">紧急联系人：</string>
    <string name="please_input_emergency_contact">请输入紧急联系人</string>
    <string name="emergency_contact_num">紧急联系人号码：</string>
    <string name="please_input_emergency_num">请输入紧急联系人号码</string>
    <string name="residential_address">现居住地址：</string>
    <string name="please_input_residential_address">请输入现居住地址：</string>
    <string name="certification_information">认证信息：</string>
    <string name="upload_positive">上传证件正面</string>
    <string name="upload_negative">上传证件反面</string>
    <string name="sponsor">发起人：</string>
    <string name="task_number">任务编号：</string>
    <string name="task_status">任务状态：</string>
    <string name="task_title">任务标题：</string>
    <string name="task_detail">任务详情：</string>
    <string name="audit_opinion">审核意见：</string>
    <string name="please_input_audit">请输入审核意见</string>
    <string name="bouns">奖金：</string>
    <string name="fine">罚款：</string>
    <string name="pending_approval">待我审批</string>
    <string name="i_started">我发起的</string>
    <string name="make_up_card">补打卡</string>
    <string name="Leave">请假</string>
    <string name="reim">报销</string>
    <string name="material">物料</string>
    <string name="card_time">补卡时间：</string>
    <string name="plaese_choose_time">请选择补卡时间</string>
    <string name="input_content">填写内容：</string>
    <string name="please_input_reson">请输入原因</string>
    <string name="approver">审批人</string>
    <string name="card_apply_content">补卡内容：</string>
    <string name="task_progress">任务进度</string>
    <string name="start_time">开始时间：</string>
    <string name="end_time">结束时间：</string>
    <string name="leave_dyas">请假天数：</string>
    <string name="leave_reson">请假事由：</string>
    <string name="reim_money">报销金额：</string>
    <string name="please_input_reim_money">请输入报销金额</string>
    <string name="reim_type">报销类型：</string>
    <string name="charge_detail">费用明细：</string>
    <string name="please_input_charge_detail">请输入费用明细描述</string>
    <string name="material_used">物品用途：</string>
    <string name="please_input_material_used">请输入物品用途</string>
    <string name="material_name">物品名称：</string>
    <string name="please_input_material_name">请输入物品名称</string>
    <string name="num">数量：</string>
    <string name="receive_detail">领用详情：</string>
    <string name="detail_description">请输入物品领用详情说明</string>
    <string name="tour_shop_inquire">巡店查询</string>
    <string name="shop_name">门店名称</string>
    <string name="my_tour">我的巡店</string>
    <string name="please_choose_shop">请选择门店</string>
    <string name="please_choose_shop_time">请选择巡店时间</string>
    <string name="input_tour_content">请输入巡店内容</string>
    <string name="input_phone_num">请输入号码</string>
    <string name="current_time">当前地址：</string>
    <string name="shop_description">门店描述：</string>
    <string name="shop_scoring">门店打分：</string>
    <string name="please_input_scoring">请输入门店分数</string>
    <string name="attendance_days">出勤天数</string>
    <string name="leave">休假</string>
    <string name="lack_card_prompt">缺卡（有补打卡功能）</string>
    <string name="thing_leave">事假</string>
    <string name="desease_leave">病假</string>
    <string name="abnormal_card_prompt">打卡异常（有补打卡功能）</string>
    <string name="lack_prompt">旷工（有补打卡功能）</string>
    <string name="purchase">采购进货</string>
    <string name="purchase_prompt">进货、增加库存</string>
    <string name="purchase_return">采购退货</string>
    <string name="purchase_order">进货历史</string>
    <string name="add">添加</string>
    <string name="search">搜索</string>
    <string name="warehousing_documents">入库单据：</string>
    <string name="please_input_order">请输入单据</string>
    <string name="order_status">订单状态：</string>
    <string name="supply_warehouse">供货仓：</string>
    <string name="warehouse_in">入库仓：</string>
    <string name="sales_order">销售单</string>
    <string name="sales_prompt">卖货、出货</string>
    <string name="sales_return">销售退货单</string>
    <string name="return_prompt">退货</string>
    <string name="sales_report">销售报表</string>
    <string name="member">会员：</string>
    <string name="please_choose_member">请选择会员</string>
    <string name="documents">单据：</string>
    <string name="please_input_order_search">请输入单据查询</string>
    <string name="prepare_by">制单人：</string>
    <string name="please_choose_prepare_by">请选择制单人</string>
    <string name="please_input_member_name">请输入会员名称</string>
    <string name="sales_shop">门店出售：</string>
    <string name="use_group_buy">以团购的形式销售</string>
    <string name="search_product">搜索商品</string>
    <string name="sales_form">销售形式：</string>
    <string name="sales_orders">销售单据：</string>
    <string name="business_date">业务日期：</string>
    <string name="income">收入</string>
    <string name="expenditure">支出</string>
    <string name="cancel">取消</string>
    <string name="type">类型：</string>
    <string name="project_options">项目选项：</string>
    <string name="form_title">表单标题：</string>
    <string name="please_input_titre">请输入标题</string>
    <string name="cost_amount">费用金额：</string>
    <string name="please_input_cost">请输入费用金额</string>
    <string name="cost_description">费用描述：</string>
    <string name="please_input_content">请输入内容</string>
    <string name="inventory_search">库存查询</string>
    <string name="inventory_status">库存状况</string>
    <string name="inventory_check">库存盘点</string>
    <string name="accurate_inventory">精确盘点库存</string>
    <string name="inventory_alarm">库存警报</string>
    <string name="alert_description">上限、下限等警报</string>
    <string name="classification">分类：</string>
    <string name="please_choose_class">请选择分类</string>
    <string name="brand">品牌：</string>
    <string name="please_choose_brand">请选择品牌</string>
    <string name="spec_model">规格型号：</string>
    <string name="please_input_spec">请输入规格型号</string>
    <string name="inventory_min">最小库存：</string>
    <string name="please_input_min_inventory">请输入最小库存数量</string>
    <string name="inventory_max">最大库存：</string>
    <string name="please_input_max_inventory">请输入最大库存</string>
    <string name="maturity_time">到期时间：</string>
    <string name="month_sales_detail">30天销售情况</string>
    <string name="total_inventory">总库存</string>
    <string name="product_id">商品编号：</string>
    <string name="unit">单位：</string>
    <string name="own_brand">所属品牌：</string>
    <string name="category">所属分类：</string>
    <string name="life">保质期：</string>
    <string name="origin">产地：</string>
    <string name="check_history">盘点历史</string>
    <string name="please_input_prepare_name">请输入制单人名称</string>
    <string name="warehouse">仓库：</string>
    <string name="inventory_detail">盘点明细</string>
    <string name="check">盘点</string>
    <string name="edit">编辑</string>
    <string name="commit_check">提交盘点</string>
    <string name="check_alarm">将按此盘点结果调整商品库存数量，确认要执行库存调整吗？</string>
    <string name="confirm">确认</string>
    <string name="order_number">单号：</string>
    <string name="click_finish">点击完成</string>
    <string name="datetime">日期：</string>
    <string name="report_people">汇报对象</string>
    <string name="current_location">当前位置：</string>
    <string name="current_tour_shop">门店名称：</string>
    <string name="report_to">汇报对象：</string>
    <string name="take_pictures">拍照</string>
    <string name="choose_shop">选择门店</string>
    <string name="choose_brand">选择品牌</string>
    <string name="can_fill">可填写</string>
    <string name="sales_amount">销售金额</string>
    <string name="must_fill">必填写</string>
    <string name="site_area">场地面积</string>
    <string name="shop_amount">门店费用</string>
    <string name="accommodation_amount">住宿费用</string>
    <string name="return_history">退货历史</string>
    <string name="sales_detail_of_shop">按门店销售明细</string>
    <string name="please_input_membre_name">请输入客户名称</string>
    <string name="store_in">存入门店：</string>
    <string name="return_reason">退货原因：</string>
    <string name="promoter">促销员：</string>
    <string name="sales_detail_brand">按品牌明细汇总</string>
    <string name="sales_detail_shop">按门店明细汇总</string>
    <string name="sales_detail_seller">按销售员明细汇总</string>
    <string name="sales_detail_of_brand">按品牌销售明细</string>
    <string name="approval_manager">审批管理</string>
    <string name="number_name">会员名称：</string>
    <string name="contact">联系人：</string>
    <string name="please_input_contact_person">请输入联系人</string>
    <string name="phone">手机：</string>
    <string name="please_input_phone_num">请输入手机号码</string>
    <string name="gender">性别：</string>
    <string name="notify">通知</string>
    <string name="sales_by_normal">以正常形式销售</string>
    <string name="sales_by_promotion">以促销形式销售</string>
    <string name="sales_price">销售价:</string>
    <string name="please_input_shop_name">请输入门店名称</string>
    <string name="subordinate">下级</string>
    <string name="search_sub_name">搜索下属名称</string>
    <string name="all_company">全公司</string>
    <string name="leaveType">请假类型：</string>
    <string name="execute">执行</string>
    <string name="continueExecute">继续审核</string>
    <string name="audit_progress">审核进度</string>
    <string name="please_input_advice">请填写意见</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>
    <string name="leaveOfThing">事假</string>
    <string name="leaveOfSick">病假</string>
    <string name="leaveOfRest">休假</string>
    <string name="leaveOfOther">其他</string>
    <string name="pleaseChoose">请选择</string>
    <string name="photo">照片</string>
    <string name="carame">相机</string>
    <string name="open_picture">相册</string>
    <string name="cancle">取消</string>
    <string name="report_object">汇报对象</string>
    <string name="report_prompt">(任务发起人，不能改)</string>
    <string name="newspaper_prompt">(点击查看执行日报详情)</string>
    <string name="newspaper_date">日报日期：</string>
    <string name="please_choose_sex">请选择性别</string>
    <string name="age">年龄：</string>
    <string name="please_input_age">请输入年龄</string>
    <string name="profession">职业：</string>
    <string name="please_input_profession">请输入职业</string>
    <string name="month_income">月收入：</string>
    <string name="please_input_month_income">请输入月收入</string>
</resources>