<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.qianmo.jinxiaocun.fu.activity.LoginActivity">

    <ImageView
        android:layout_width="208dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:src="@mipmap/logo"
        android:layout_marginTop="112dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32dp"
        app:met_baseColor="@android:color/white"
        app:met_primaryColor="@android:color/white"
        app:met_floatingLabelText="@string/account"
        app:met_floatingLabel="highlight"
        android:layout_marginRight="44dp"
        android:layout_marginEnd="44dp"
        app:met_iconLeft="@mipmap/zhangh"
        app:met_clearButton="true"
        android:hint="@string/please_input_account" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_clearButton="true"
        app:met_iconLeft="@mipmap/mima"
        android:layout_marginRight="44dp"
        android:layout_marginEnd="44dp"
        android:inputType="numberPassword"
        android:imeOptions="actionGo"
        app:met_baseColor="@android:color/white"
        app:met_primaryColor="@android:color/white"
        app:met_floatingLabelText="@string/password"
        app:met_floatingLabel="highlight"
        android:hint="@string/please_input_password"/>
    <Button
        android:layout_width="match_parent"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="56dp"
        android:id="@+id/btn_login"
        android:layout_marginRight="28dp"
        android:text="@string/login"
        android:textSize="@dimen/_14sp"
        android:textColor="@android:color/white"
        android:background="@drawable/btn_login_select"
        android:layout_height="wrap_content" />
</LinearLayout>
