<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/open_from_camera"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/carame"
        android:textColor="#333"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f5f5f5" />

    <TextView
        android:id="@+id/open_album"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/open_picture"
        android:textColor="#333"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#f5f5f5" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/cancle"
        android:textColor="#333"
        android:textSize="15sp" />
</LinearLayout>
